appId: ${APPID}
---
- runFlow: _common_unlock_if_needed.yaml
- runFlow:
    when:
      visible:
        id: "btn_Manage Keys"
    commands:
      - tapOn:
          id: "btn_Manage Keys"
- runFlow:
    when:
      visible: "Manage Keys"
    commands:
      - tapOn: "Manage Keys"
- extendedWaitUntil:
    visible: "Manage Keys"
    timeout: 15000
