appId: io.hexawallet.keeper
---
- runFlow: _common_open_manage_keys.yaml
- assertVisible:
    id: "btn_Add Key"
- tapOn:
    id: "btn_Add Key"
- waitForAnimationToEnd:
    timeout: 3000
- runFlow:
    when:
      visible:
        id: "btn_KEEPER"
    commands:
      - tapOn:
          id: "btn_KEEPER"
- assertVisible:
    id: "btn_Add a New Mobile Key"
- tapOn:
    id: "btn_Add a New Mobile Key"
- runFlow:
    when:
      visible:
        id: "modal_primary_btn"
    commands:
      - tapOn:
          id: "modal_primary_btn"
- extendedWaitUntil:
    visible: "Manage Keys"
    timeout: 20000
- tapOn:
    id: "btn_back"
