appId: io.hexawallet.keeper
---
- runFlow: _common_unlock_if_needed.yaml
- assertVisible:
    id: "wallet_list"
- swipe:
    from:
      id: "wallet_list"
    direction: LEFT
- assertVisible:
    id: "btn_add_wallet"
- tapOn:
    id: "btn_add_wallet"
- waitForAnimationToEnd:
    timeout: 3000
- assertVisible: "Add or Import Wallet"
- assertVisible:
    id: "btn_Hot Wallet"
- assertVisible:
    id: "btn_2-of-3 Vault"
- assertVisible:
    id: "btn_3-of-5 Vault"
- assertVisible:
    id: "btn_Collaborative"
- tapOn:
    id: "btn_Hot Wallet"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    id: "input_transfer_policy"
- eraseText
- inputText: "21000"
- hideKeyboard
- assertVisible:
    id: "btn_primaryText"
- tapOn:
    id: "btn_primaryText"
- waitForAnimationToEnd:
    timeout: 20000
- runFlow:
    when:
      visible:
        id: "modal_primary_btn"
    commands:
      - tapOn:
          id: "modal_primary_btn"
- assertVisible:
    id: "btn_back"
- tapOn:
    id: "btn_back"
