appId: io.hexawallet.keeper
---
- runFlow: _common_unlock_if_needed.yaml
- tapOn:
    id: "btn_AppSettingsIcon"
- assertVisible:
    id: "btn_back"
- assertVisible: "App Settings"
- runFlow:
    when:
      visible:
        id: "btn_App_Backup"
    commands:
      - assertVisible:
          id: "btn_App_Backup"
- runFlow:
    when:
      visible: "Backup Wallet"
    commands:
      - assertVisible: "Backup Wallet"
- assertVisible:
    id: "view_Biometrics"
- assertVisible:
    id: "view_Dark_Mode"
- assertVisible:
    id: "view_Node_Settings"
- assertVisible:
    id: "view_Version_History"
- assertVisible:
    id: "view_Tor_Settings"
- assertVisible:
    id: "view_Language_&_Currency"
- runFlow:
    when:
      visible:
        id: "view_KeeperTelegram"
    commands:
      - assertVisible:
          id: "view_KeeperTelegram"
- assertVisible:
    id: "view_keeperTwitter"
- tapOn:
    id: "view_Dark_Mode"
- tapOn:
    id: "view_Dark_Mode"
- runFlow: exportseed.yaml
- runFlow: versionhistory.yaml
- tapOn:
    id: "btn_back"
