appId: io.hexawallet.keeper
---
- runFlow: _common_open_wallet.yaml
- assertVisible:
    id: "btn_Buy"
- tapOn:
    id: "btn_Buy"
- runFlow:
    when:
      visible:
        id: "btn_Buy Bitcoin"
    commands:
      - tapOn:
          id: "btn_Buy Bitcoin"
- runFlow:
    when:
      visible:
        id: "btn_primaryText"
    commands:
      - tapOn:
          id: "btn_primaryText"
