appId: ${APPID}
---
- runFlow: _common_open_wallet.yaml
- tapOn:
    id: "btn_Receive"
- assertVisible:
    id: "btn_back"
- tapOn:
    id: "btn_back"
- tapOn:
    id: "btn_Send"
- runFlow: _common_handle_runtime_permissions.yaml
- assertVisible:
    id: "btn_back"
- tapOn:
    id: "btn_back"
- tapOn:
    id: "btn_Settings"
- assertVisible:
    id: "btn_back"
- tapOn:
    id: "btn_back"
- tapOn:
    id: "btn_back"
