appId: io.hexawallet.keeper
---
# - runFlow: login.yaml
- tapOn:
    id: 'view_wallet_0'
    index: 0
- tapOn:
    id: 'btn_Receive'
- tapOn:
    id: 'btn_copy_address'
- repeat:
    while:
      visible: 'Address Copied Successfully'
    commands:
      - tapOn:
          id: 'btn_copy_address'
- tapOn:
    id: 'btn_back'
- waitForAnimationToEnd:
    timeout: 1000
- tapOn:
    id: 'btn_back'
- waitForAnimationToEnd:
    timeout: 1000
