appId: io.hexawallet.keeper.development
---

##################################
# Launch App
##################################

- launchApp

##################################
# Enter Passcode (11111111)
##################################

- assertVisible:
    id: "key_1"

- repeat:
    times: 8
    commands:
      - tapOn:
          id: "key_1"

# Tap Create (Primary Button)
- assertVisible:
    id: "btn_primaryText"

- tapOn:
    id: "btn_primaryText"

##################################
# Remember Passcode Screen
##################################

- assertVisible: "Remember your passcode"

# Tap Back
- tapOn: "Back"

##################################
# Back To Passcode Screen
##################################

# Primary button (Create) should be visible again
- assertVisible:
    id: "btn_primaryText"

# Tap Create again
- tapOn:
    id: "btn_primaryText"

##################################
# Continue Screen
##################################

# Now Continue button appears
- assertVisible: "Continue"

- tapOn: "Continue"

##################################
# Enable Biometric Authentication
##################################

- assertVisible: "Enable Biometric Authentication"

# Skip biometric
- tapOn: "Cancel"

##################################
# Onboarding Screens
##################################

- assertVisible: "Create wallets"

# Swipe to Manage Keys
- swipe:
    start: 80%,50%
    end: 10%,50%

- assertVisible: "Manage keys"

# Swipe to Plan for Inheritance
- swipe:
    start: 80%,50%
    end: 10%,50%

- assertVisible: "Plan for Inheritance"

##################################
# FAQs
##################################

- assertVisible: "See FAQs"
- tapOn: "See FAQs"

- back

##################################
# Get Started
##################################

- assertVisible: "Get Started"
- tapOn: "Get Started"

##################################
# Welcome Screen
##################################

- assertVisible: "Welcome to Bitcoin Keeper"

- tapOn: "Start New"

##################################
# Final Modal
##################################

- assertVisible: "Next"
- tapOn: "Next"

##################################
# Home Screen
##################################

- assertVisible: "Home"
